tests/conformance/syntax/negative/end_coend_missing_paren_invalid.ditt
module Syntax.EndCoendFormsBad where

postulate C : Cat
postulate P : (x : C) -> Prop
e : end x : C. P x = e
